fix: Resolve all test failures and improve code quality
- Fix PHP 8.1 compatibility (remove typed constants)
- Make getDefaultHeaders() non-abstract with default implementation
- Fix ProcessIncomingTransfer job constructor calls in tests
- Add required sender_name field in test data
- Fix idempotency key calculation
- Fix webhook status code expectations (202 instead of 200)
- Fix amount type casting in DepositConfirmed event
- Add Log import to FlutterwaveDriver
- Add PHPDoc annotations to models for PHPStan
- Add getCachedHealthCheck() and isCurrencySupported() to interface
- Install Larastan for better Laravel support
- Configure PHPStan ignore patterns for Laravel generics
- Remove coverage config from phpunit.xml to eliminate warnings
- All tests passing (33 tests, 70 assertions)
- PHPStan passing (Level 6, no errors)
- Pint formatting complete

--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,11 @@
         "illuminate/routing": "^9.0|^10.0|^11.0"
     },
     "require-dev": {
+        "larastan/larastan": "^3.8",
+        "laravel/pint": "^1.0",
         "orchestra/testbench": "^7.0|^8.0|^9.0",
-        "phpunit/phpunit": "^9.5|^10.0",
-        "laravel/pint": "^1.0"
+        "phpstan/phpstan": "^2.1",
+        "phpunit/phpunit": "^9.5|^10.0"
     },
     "autoload": {
         "psr-4": {
@@ -70,4 +72,3 @@
     "minimum-stability": "dev",
     "prefer-stable": true
 }
-
