--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,3 +1,6 @@
+includes:
+    - vendor/larastan/larastan/extension.neon
+
 parameters:
     level: 6
     paths:
@@ -7,7 +10,8 @@ parameters:
     treatPhpDocTypesAsCertain: false
     ignoreErrors:
         - '#Unsafe usage of new static\(\)#'
-        - '#Call to an undefined method.*Illuminate\\Contracts\\Auth\\Factory::.*#'
-        - '#Call to an undefined method.*Illuminate\\Contracts\\Foundation\\Application::.*#'
-        - '#Call to an undefined method.*DriverInterface::(getCachedHealthCheck|isCurrencySupported)\(\)#'
+        - '#Property.*\$data.*type has no value type specified in iterable type array#'
+        - '#Class.*has PHPDoc tag @property for property.*with no value type specified in iterable type array#'
+        - '#Method.*return type with generic class.*does not specify its types#'
+        - '#Method.*has parameter.*with generic class.*does not specify its types#'
 
